--- a/index.html
+++ b/index.html
@@ -107,9 +107,11 @@
 	noise.onclick = function(){
 			if (toggle1 == "off") {
 				ske.style.display = "none";
+				noise.style.display = "block";
 				toggle1 = "on";
 			}else if (toggle1 == "on") {
 				ske.style.display = "block";
+				noise.style.display = "none";
 				toggle1 = "off";
 			}
 		}
